--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@aws-cdk/aws-amplify": "^1.203.0",
+    "@tanstack/react-table": "^8.20.5",
     "aws-amplify": "^6.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
